[package]
name = "crypto-layer"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]

[profile.dev]
debug-assertions = true
overflow-checks = true

[profile.release]
# Use fewer codegen units to enable more optimizations
codegen-units = 1

# Enable link time optimization for better performance
lto = true

# Strip debug symbols for smaller binary size
debug = false
strip = "symbols"

[features]
ffi = []
android = ["dep:robusta_jni", "dep:libloading", "dep:ndk-context"]
nks = ["core", "dep:x25519-dalek", "hcvault", "dep:reqwest", "dep:rand", "dep:openssl", "dep:arrayref", "dep:base64", "dep:ed25519-dalek", "dep:sodiumoxide"]
hcvault = []
core = []
linux = ["tss-esapi"]
apple-secure-enclave = ["dep:security-framework", "dep:core-foundation", "dep:base64"]
win = ["dep:windows"]
hsm = []
software = ["dep:base64", "dep:ring", "dep:pkcs8", "dep:der", "dep:redb", "dep:ed25519-compact", "dep:chacha20", "dep:argon2"]
software-keystore = ["software", "software-metadata"]
software-metadata = ["software"]
yubi = ["hsm", "dep:yubikey", "dep:x509-cert", "dep:base64", "dep:rsa", "dep:openssl"]
ts-interface = ["dep:ts-rs"]

[dependencies]
argon2 = { version = "0.5.3", optional = true }
arrayref = { version = "0.3.7", optional = true }
base64 = { version = "0.22.1", optional = true }
chacha20 = { version = "0.9.1", optional = true }
core-foundation = { version = "0.10.0", optional = true }
der = { version = "0.7.9", optional = true }
ed25519-dalek = { version = "2.1.1", optional = true }
openssl = { version = "0.10.66", optional = true }
pkcs8 = { version = "0.10.2", optional = true }
rand = { version = "0.8.5", optional = true }
redb = { version = "2.4.0", optional = true }
reqwest = { version = "0.12.12", features = ["json"], optional = true }
ring = { version = "0.17.8", optional = true }
robusta_jni = { version = "0.2", optional = true }
rsa = { version = "0.9.7", optional = true }
securestore = { version = "0.100.0", optional = true }
security-framework = { version = "3.0.0", optional = true, default-features = false, features = ["OSX_10_15"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.135" }
sha2 = { version = "0.10.8" }
sodiumoxide = { version = "0.2.7", optional = true }
tracing = { version = "0.1.41", features = ["attributes", "release_max_level_info"] }
tracing-attributes = "0.1.28"
tss-esapi = { version = "7.5.1", optional = true }
windows = { version = "0.57.0", features = [
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_Security_Tpm",
    "Security_Cryptography_Core",
    "Win32_Security_Cryptography",
    "Win32_Security_Cryptography_Catalog",
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
], optional = true }
# windows-core = "0.58.0"
# windows-interface = "0.58.0"
# windows-metadata = "0.58.0"
# windows-result = "0.2.0"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"], optional = true }
x509-cert = { version = "0.2.5", optional = true }
yubikey = { version = "0.8.0", optional = true, features = ["untested"] }
nanoid = "0.4.0"
enum_dispatch = "0.3.13"
libloading = { version = "0.8.5", optional = true }
thiserror = "2.0.11"
anyhow = "1.0.95"
bincode = "1.3.3"
pollster = "0.4.0"
rmp-serde = "1.3.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
ndk-context = { version = "0.1.1", optional = true }
ts-rs = { version = "10.0.0", optional = true, features = ["format"] }
strum = { version = "0.26.3", features = ["derive"] }
ed25519-compact = { version = "2.1.1", optional = true }
sled = "0.34.7"
hmac = "0.12.1"

[dev-dependencies]
color-eyre = "0.6.3"
test-case = "3.3.1"
tempfile = "3.15.0"
lazy_static = "1.5.0"
