[package]
name = "crypto-layer"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]

[profile.dev]
debug-assertions = true
overflow-checks = true

[profile.release]
# Use fewer codegen units to enable more optimizations
codegen-units = 1

# Enable link time optimization for better performance
lto = true

# Strip debug symbols for smaller binary size
debug = false
strip = "symbols"

[features]
android = ["dep:robusta_jni", "dep:libloading"]
linux = ["tss-esapi"]
apple-secure-enclave = [
    "dep:security-framework",
    "dep:core-foundation",
    "dep:base64",
]
win = ["dep:windows"]
software = [
    "dep:base64",
    "dep:blake2",
    "dep:ring",
    "dep:ed25519-compact", # ed25519 X25519     PEM   full rust
    "dep:chacha20",        # ChaCha20   XChaCha20     full rust
    "dep:argon2",
    "dep:sha3",
    "dep:x25519-dalek",    # X25519                   full rust
    "dep:p256",
]
ts-interface = ["dep:ts-rs"]

[dependencies]
argon2 = { version = "0.5.3", optional = true }
base64 = { version = "0.22.1", optional = true }
blake2 = { version = "0.10.6", optional = true }
chacha20 = { version = "0.9.1", optional = true }
core-foundation = { version = "0.10.0", optional = true }
der = { version = "0.7.9", optional = true }
pkcs8 = { version = "0.10.2", optional = true }
ring = { version = "0.17.8", optional = true, features = ["std"] }
robusta_jni = { version = "0.2", optional = true }
security-framework = { version = "3.0.0", optional = true, default-features = false, features = [
    "OSX_10_15",
] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.135" }
p256 = { version = "0.13.2", optional = true, features = ["ecdh"] }
sha2 = { version = "0.10.8" }
sha3 = { version = "0.10.8", optional = true }
tracing = { version = "0.1.41", features = [
    "attributes",
    "release_max_level_info",
] }
tracing-attributes = "0.1.28"
tss-esapi = { version = "7.5.1", optional = true }
windows = { version = "0.57.0", features = [
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_Security_Tpm",
    "Security_Cryptography_Core",
    "Win32_Security_Cryptography",
    "Win32_Security_Cryptography_Catalog",
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
], optional = true }
x25519-dalek = { version = "2.0.1", features = [
    "static_secrets",
], optional = true }
nanoid = "0.4.0"
enum_dispatch = "0.3.13"
libloading = { version = "0.8.5", optional = true }
thiserror = "2.0.11"
anyhow = "1.0.95"
pollster = "0.4.0"
ts-rs = { version = "10.0.0", optional = true, features = ["format"] }
strum = { version = "0.26.3", features = ["derive"] }
ed25519-compact = { version = "2.1.1", optional = true }
sled = "0.34.7"
hmac = "0.12.1"
digest = "0.10.7"
zeroize = { version = "1.8.1", features = ["derive"] }
error-stack = "0.5.0"

[dev-dependencies]
color-eyre = "0.6.3"
test-case = "3.3.1"
tempfile = "3.15.0"
lazy_static = "1.5.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
