[package]
name = "crypto-layer"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]

[profile.dev]
debug-assertions = true
overflow-checks = true

[profile.release]
# Use fewer codegen units to enable more optimizations
codegen-units = 1

# Enable link time optimization for better performance
lto = true

# Strip debug symbols for smaller binary size
debug = false
strip = "symbols"

[features]
default = ["software"]
android = ["dep:robusta_jni"]
apple-secure-enclave = [
    "dep:security-framework",
    "dep:core-foundation",
    "dep:base64",
    "dep:security-framework-sys",
]
win = ["dep:windows"]
software = [
    "dep:base64",
    "dep:blake2",
    "dep:ring",
    "dep:ed25519-compact",
    "dep:chacha20poly1305",
    "dep:argon2",
    "dep:sha3",
    "dep:x25519-dalek",
    "dep:p256",
]
ts-interface = ["dep:ts-rs"]

[dependencies]
argon2 = { version = "0.5.3", optional = true }
base64 = { version = "0.22.1", optional = true }
blake2 = { version = "0.10.6", optional = true }
chacha20poly1305 = { version = "0.10.1", optional = true }
core-foundation = { version = "0.10.0", optional = true }
ring = { version = "0.17.14", optional = true }
robusta_jni = { version = "0.2", optional = true }
security-framework = { version = "3.0.0", optional = true, default-features = false, features = [
    "OSX_10_15",
] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.135" }
p256 = { version = "0.13.2", optional = true, features = ["ecdh"] }
sha2 = { version = "0.10.8" }
sha3 = { version = "0.10.8", optional = true }
tracing = { version = "0.1.41", features = [
    "attributes",
    "release_max_level_info",
] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
windows = { version = "0.57.0", features = [
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_Security_Tpm",
    "Security_Cryptography_Core",
    "Win32_Security_Cryptography",
    "Win32_Security_Cryptography_Catalog",
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
], optional = true }
x25519-dalek = { version = "2.0.1", features = [
    "static_secrets",
], optional = true }
nanoid = "0.4.0"
enum_dispatch = "0.3.13"
thiserror = "2.0.11"
anyhow = "1.0.95"
pollster = "0.4.0"
ts-rs = { version = "11.0.1", optional = true, features = ["format"] }
strum = { version = "0.27.1", features = ["derive"] }
ed25519-compact = { version = "2.1.1", optional = true }
sled = "0.34.7"
hmac = "0.12.1"
digest = "0.10.7"
zeroize = { version = "1.8.1", features = ["derive"] }
itertools = "0.14.0"
rmp-serde = "1.3.0"
security-framework-sys = { version = "2.14.0", optional = true }
rusqlite = "0.37.0"

[dev-dependencies]
color-eyre = "0.6.3"
test-case = "3.3.1"
tempfile = "3.15.0"
lazy_static = "1.5.0"
rstest = "0.25.0"
