[package]
name = "cal_flutter_plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge_codegen = "2.5.0"
flutter_rust_bridge = "=2.5.1"
robusta_jni = "0.2"
libloading = "0.8.5"
tracing = { version = "0.1.40", features = ["attributes"] }
tracing-subscriber = "0.3.18"
anyhow = "1.0.91"
crypto-layer = { path = "../../"}

[target.'cfg(target_os = "android")'.dependencies]
tracing-android = { version = "0.2.0" }
crypto-layer = { path = "../../", features = ["android"] }